Fix language widget in waybar getting cut off

--- a/.config/waybar/laptop_style.css
+++ b/.config/waybar/laptop_style.css
@@ -216,12 +216,10 @@ label:focus {
 #mpd.paused {
     background-color: #51a37a;
 }
+*/
 
 #language {
-    background: #00b093;
-    color: #740864;
     padding: 0 5px;
     margin: 0 5px;
-    min-width: 16px;
+    min-width: 160px;
 }
-*/
